$Rev$
[2008/01/14]
PrefDialog.py mPreference.py
                    Change preference dialog from notebook to treebook
AsyncAction.py mInputAssistant.py
                    Refactor the AsyncAction class, and add get_timestep() method. 
                    Reference to ygao's implemention
                    
[2008/01/12]
DDE.py mDDESupport.py
                    Change DDE to asyncore and asynchat framework
                    
[2008/01/11]
mako_plugin/dirbrowserext.py makotmp.acp
                    Fix mako tag auto complete bug #issue 14
unicodetext.py      Fix utf-16 convertion bug
mIndentMove.py      When moving next indent position, select the text #issue 15
FlatNotebook.py     Fix if set DROP_DOWN_TABS_LIST style, right arrow will disappear bug
MainFrame.py mAutoCheck.py
                    Change auto file check and disable memory display

[2008/01/10]
EditorFactory.py    Add FNB.FNB_DROPDOWN_TABS_LIST style to EditorCtrl
Entry.py            Using new SetFocus method of meide
dynamicmenu.py      Fix editor shortcuts key caption error

[2008/01/09]
ShellWindow.py      Fix popup menu creation too late, so the UpdateUI will raise exception
Editor.py           Also change popup menu creation position
HtmlPage.py         Fix GTK platform display
AsyncAction.py mInputassistant.py
                    Improve AsyncAction.py using block mode and timeout parameter, so
                    it'll natural implement the timeout delay process after press a key.
                    And this will simplify the code. Also comment the on_key_down function, 
                    which invoke the win.mainframe.auto_routin_ac_action.put, because
                    on_key_down is triggered by pressing control keystroke, so I think
                    it's unnecessary. Also add ygao's if you type in the same line
                    from last modified, and don't do analysis work. But I also judged if